--- a/vue/pageAjoutReussit.html
+++ b/vue/pageAjoutReussit.html
@@ -48,7 +48,7 @@
 <div class="message-box">
     <h1>Ajout Réussi ! ✅</h1>
     <p>L'élément a été ajouté avec succès.</p>
-    <a href="index.html" class="btn-retour">Retour à l'accueil</a>
+    <a href="../index.php" class="btn-retour">Retour à l'accueil</a>
 </div>
 </body>
 </html>
